<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ข่าวเช้านี้</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- news tab -->
    <string name="news_text">ข่าว</string>
    <string name="settings_text">ตั้งค่า</string>

    <!-- settings tab -->
    <string name="add_source_text">เลือกประเภทข่าวและสำนักพิมพ์ที่คุณชื่นชอบ</string>
    <string name="settings_title">ตั้งค่า</string>
    <string name="provider_selector_text">เลือกสำนักพิมพ์</string>
    <string name="typenews_selector_text">เลือกประเภทข่าว</string>
    <string name="it_text">เทคโนโลยี</string>

    <!-- thai translate -->
    <string name="maximun_alert_text">ข่าวเช้านี้ ที่ประเทศไทย</string>
    <string name="splash_screen_text">ข่าวเช้านี้ ที่ประเทศไทย</string>
    <string name="breaking_news_text">ข่าวใหมล่าสุด</string>
    <string name="political_text">การเมือง</string>
    <string name="entertainment_text">บันเทิง</string>
    <string name="sport_text">กีฬา</string>
    <string name="country_text">ข่าวในประเทศ</string>
    <string name="oversea_text">ข่าวต่างประเทศ</string>
    <string name="economic_text">เศรษฐกิจ หุ้น</string>
    <string name="techonology_text">เทคโนโลยี เกมส์</string>
    <string name="science_text">วิทยาศาสตร์</string>
    <string name="lifestyle_text">ไลฟ์สไตล์</string>
    <string name="study_text">การศึกษา</string>
    <string name="other_text">ทั่วไป</string>
    <string name="type_news_text">ประเภทของข่าว</string>
    <string name="provider_news_text">ที่มาของข่าว</string>
    <string name="addfeed_edt_hint_text">url ของผู้ให้บริการ rss</string>
    <string name="post_text">โพสต์</string>
    <string name="your_comment_hint_text">ความคิดเห็นของคุณ</string>
    <string name="credit_text">ดาวโหลดแอปนี้</string>
    <string name="share_text">แบ่งปัน</string>
    <string name="internet_disconnect_aleart_msg">การเชื่อมต่อมีปัญหา กรุณาตรวจสอบการเชื่อมต่ออีกครั้ง</string>
    <string name="n_string">น</string>
    <string name="continue_read_text">อ่านต่อ</string>
    <string name="from_text">ที่มา</string>
    <string name="by_text">โดย</string>
    <string name="dailynews_text">เดลินิวส์</string>
    <string name="thairath_text">ไทยรัฐ</string>
    <string name="pass_day_text">วันที่แล้ว</string>
    <string name="pass_hour_text">ชั่วโมงที่แล้ว</string>
    <string name="pass_minute_text">นาทีที่แล้ว</string>
    <string name="pass_second_text">ไม่กี่วินาทีที่แล้ว</string>
    <string name="january">มกราคม</string>
    <string name="february">กุมภาพันธ์</string>
    <string name="march">มีนาคม</string>
    <string name="april">เมษายน</string>
    <string name="may">พฤษภาคม</string>
    <string name="june">มิถุนายน</string>
    <string name="july">กรกฎาคม</string>
    <string name="august">สิงหาคม</string>
    <string name="september">กันยายน</string>
    <string name="october">ตุลาคม</string>
    <string name="november">พฤศจิกายน</string>
    <string name="december">ธันวาคม</string>

</resources>