<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/postCommentEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_comment_hint_text" />

    <Button
        android:id="@+id/postCommentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postCommentEdt"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/share_text"
        android:text="@string/post_text" >
    </Button>

</RelativeLayout>