<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/addNewsSourceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_source_text" />

    <RelativeLayout
        android:id="@+id/addFeedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewsSourceTv"
        android:layout_centerHorizontal="true" >

        <Spinner
            android:id="@+id/typeSelectSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/urlFeedEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/typeSelectSpn"
            android:hint="@string/addfeed_edt_hint_text"
            android:inputType="textUri" />

        <ImageButton
            android:id="@+id/addFeedImgBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/urlFeedEdt"
            android:background="@null"
            android:contentDescription="@string/hello_world"
            android:scaleType="fitCenter"
            android:src="@drawable/plus_img" >
        </ImageButton>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/providerSelectorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addFeedLayout"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/typeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/type_news_text" >
        </TextView>

        <TextView
            android:id="@+id/providerTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/provider_news_text" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/providerSelectorLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/providerSelectorTv"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/typeLv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >
        </ListView>

        <ListView
            android:id="@+id/providerLv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >
        </ListView>
    </LinearLayout>

</RelativeLayout>